# appeals

./: .gitignore  celery_daemon.conf.example  package-lock.json  package.json  pyproject.toml  vite.config.js
backend/: combined.docx  new-file-name.docx  test.docx
backend/apps/archive/: apps.py  urls.py  views.py
backend/apps/cases/: admin.py  apps.py  forms.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
backend/apps/classifiers/: admin.py  models.py  services.py
backend/apps/common/: decorators.py  mixins.py  utils.py
backend/apps/filling/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  tasks.py  urls.py  utils.py  views.py
backend/apps/meetings/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
backend/apps/notifications/: models.py  serializers.py  services.py  urls.py  views.py
backend/apps/payments/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/apps/search/: apps.py  forms.py  services.py  urls.py  views.py
backend/apps/stats/: apps.py  forms.py  services.py  urls.py  views.py
backend/apps/support/: apps.py  forms.py  models.py  urls.py  views.py
backend/apps/users/: admin.py  backends.py  forms.py  models.py  serializers.py  services.py  urls.py  views.py
backend/core/: celery.py  settings.py.example  urls.py
backend/templates/: base.html  base_cabinet.html
backend/templates/_partial/: header.html  sidebar.html
backend/templates/bootstrap5/: errors.html
backend/templates/registration/: base.html  login.html  password_reset_complete.html  (+4 more)
fixtures/: claim_fields.json  classifiers.json
frontend/app/: App.vue  main.js
(+334 files in other folders)
