[tool.poetry]
name = "appeals"
version = "0.1.0"
description = ""
authors = ["Alexandr Monastyrtesky <alex.mon1989@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "3.2.12"
crispy-bootstrap5 = "^0.6"
django-debug-toolbar = "^3.2.4"
python-docx = "^0.8.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
