[tool.poetry]
name = "appeals"
version = "0.1.0"
description = ""
authors = ["Alexandr Monastyrtesky <alex.mon1989@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.0.6"
crispy-bootstrap5 = "^0.6"
django-debug-toolbar = "^3.5.0"
python-docx = "^0.8.11"
djangorestframework-datatables = "^0.7.0"
django-vite = "^2.0.2"
docxcompose = "^1.3.5"
celery = "5.2.7"
redis = "^4.3.4"
elasticsearch-dsl = "6.4.0"
django-celery-beat = "^2.3.0"
mssql-django = "^1.1.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
